tests/ui/sized-hierarchy/incomplete-inference-issue-143992.next_sized_hierarchy.stderr
error: unknown start of token: `
  --> $DIR/incomplete-inference-issue-143992.rs:7:51
   |
LL | ||||||| parent of 7faf6cf1c12 (revert: PR144016 - `MetaSized` does not always hold)
   |                                                   ^
   |
help: Unicode character '`' (Grave Accent) looks like ''' (Single Quote), but it is not
   |
LL - ||||||| parent of 7faf6cf1c12 (revert: PR144016 - `MetaSized` does not always hold)
LL + ||||||| parent of 7faf6cf1c12 (revert: PR144016 - 'MetaSized` does not always hold)
   |

error: unknown start of token: `
  --> $DIR/incomplete-inference-issue-143992.rs:7:61
   |
LL | ||||||| parent of 7faf6cf1c12 (revert: PR144016 - `MetaSized` does not always hold)
   |                                                             ^
   |
help: Unicode character '`' (Grave Accent) looks like ''' (Single Quote), but it is not
   |
LL - ||||||| parent of 7faf6cf1c12 (revert: PR144016 - `MetaSized` does not always hold)
LL + ||||||| parent of 7faf6cf1c12 (revert: PR144016 - `MetaSized' does not always hold)
   |

error: unknown start of token: `
  --> $DIR/incomplete-inference-issue-143992.rs:11:41
   |
LL | >>>>>>> 7faf6cf1c12 (revert: PR144016 - `MetaSized` does not always hold)
   |                                         ^
   |
help: Unicode character '`' (Grave Accent) looks like ''' (Single Quote), but it is not
   |
LL - >>>>>>> 7faf6cf1c12 (revert: PR144016 - `MetaSized` does not always hold)
LL + >>>>>>> 7faf6cf1c12 (revert: PR144016 - 'MetaSized` does not always hold)
   |

error: unknown start of token: `
  --> $DIR/incomplete-inference-issue-143992.rs:11:51
   |
LL | >>>>>>> 7faf6cf1c12 (revert: PR144016 - `MetaSized` does not always hold)
   |                                                   ^
   |
help: Unicode character '`' (Grave Accent) looks like ''' (Single Quote), but it is not
   |
LL - >>>>>>> 7faf6cf1c12 (revert: PR144016 - `MetaSized` does not always hold)
LL + >>>>>>> 7faf6cf1c12 (revert: PR144016 - `MetaSized' does not always hold)
   |

error: unknown start of token: `
  --> $DIR/incomplete-inference-issue-143992.rs:40:51
   |
LL | ||||||| parent of 7faf6cf1c12 (revert: PR144016 - `MetaSized` does not always hold)
   |                                                   ^
   |
help: Unicode character '`' (Grave Accent) looks like ''' (Single Quote), but it is not
   |
LL - ||||||| parent of 7faf6cf1c12 (revert: PR144016 - `MetaSized` does not always hold)
LL + ||||||| parent of 7faf6cf1c12 (revert: PR144016 - 'MetaSized` does not always hold)
   |

error: unknown start of token: `
  --> $DIR/incomplete-inference-issue-143992.rs:40:61
   |
LL | ||||||| parent of 7faf6cf1c12 (revert: PR144016 - `MetaSized` does not always hold)
   |                                                             ^
   |
help: Unicode character '`' (Grave Accent) looks like ''' (Single Quote), but it is not
   |
LL - ||||||| parent of 7faf6cf1c12 (revert: PR144016 - `MetaSized` does not always hold)
LL + ||||||| parent of 7faf6cf1c12 (revert: PR144016 - `MetaSized' does not always hold)
   |

error: unknown start of token: `
  --> $DIR/incomplete-inference-issue-143992.rs:44:41
   |
LL | >>>>>>> 7faf6cf1c12 (revert: PR144016 - `MetaSized` does not always hold)
   |                                         ^
   |
help: Unicode character '`' (Grave Accent) looks like ''' (Single Quote), but it is not
   |
LL - >>>>>>> 7faf6cf1c12 (revert: PR144016 - `MetaSized` does not always hold)
LL + >>>>>>> 7faf6cf1c12 (revert: PR144016 - 'MetaSized` does not always hold)
   |

error: unknown start of token: `
  --> $DIR/incomplete-inference-issue-143992.rs:44:51
   |
LL | >>>>>>> 7faf6cf1c12 (revert: PR144016 - `MetaSized` does not always hold)
   |                                                   ^
   |
help: Unicode character '`' (Grave Accent) looks like ''' (Single Quote), but it is not
   |
LL - >>>>>>> 7faf6cf1c12 (revert: PR144016 - `MetaSized` does not always hold)
LL + >>>>>>> 7faf6cf1c12 (revert: PR144016 - `MetaSized' does not always hold)
   |

error: encountered diff marker
  --> $DIR/incomplete-inference-issue-143992.rs:4:1
   |
LL | <<<<<<< HEAD
   | ^^^^^^^ between this marker and `|||||||` is the code that we're merging into
...
LL | ||||||| parent of 7faf6cf1c12 (revert: PR144016 - `MetaSized` does not always hold)
   | ------- between this marker and `=======` is the base code (what the two refs diverged from)
LL | //@[current] check-pass
LL | =======
   | ------- between this marker and `>>>>>>>` is the incoming code
LL | //@[current] check-fail
LL | >>>>>>> 7faf6cf1c12 (revert: PR144016 - `MetaSized` does not always hold)
   | ^^^^^^^ this marker concludes the conflict region
   |
   = note: conflict markers indicate that a merge was started but could not be completed due to merge conflicts
           to resolve a conflict, keep only the code you want and then delete the lines containing conflict markers
   = help: if you're having merge conflicts after pulling new code:
           the top section is the code you already had and the bottom section is the remote code
           if you're in the middle of a rebase:
           the top section is the code being rebased onto and the bottom section is the code coming from the current commit being rebased
   = note: for an explanation on these markers from the `git` documentation:
           visit <https://git-scm.com/book/en/v2/Git-Tools-Advanced-Merging#_checking_out_conflicts>

error: aborting due to 9 previous errors

